# vrx

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
src/: bindings.rs  lib.rs  main.cpp  main.rs  matries.rs  sparse.rs  vkcholesky.cc  vkcholesky.cpp  vkcholesky.h  vkcholesky.hpp  vkcontext.cpp  vkcontext.h  vkcontext.hpp  vkdevice.rs  vulkan_header.rs
src/shader/: cholesky.comp  cholesky.spv  lib.rs
tests/: test_matrix.rs
vrx/: Cargo.toml  build.rs
vrx-computes/: Cargo.toml  README.md  build.rs
vrx-computes/src/: main.rs  matries.rs
vrx-computes/src/shader/: cholesky.comp  cholesky.spv
vrx-graphics/: Cargo.toml  build.rs
vrx-graphics/src/: main.rs
vrx-graphics/src/shader/: vertex.vert
vrx/shader/: Cargo.toml
vrx/shader/src/: lib.rs
vrx/src/: graphics.rs  lib.rs  main.rs  vk_header.rs  vk_traits.rs  vkstruct.rs  vktraits.rs
vrx/src/memory/: buffer.rs  descriptor.rs  mod.rs  texture.rs
