[package]
name = "vkcholesky"
version = "0.1.0"
edition = "2021"
links = "vulkan"

[dependencies]
cxx = "1.0.85"
paste = "1.0"
libc = "0.2.0"
anyhow = "1.0"
derive_builder = "0.12.0"
regex = "1"
lazy_static = "1.4.0"
phf = { version = "0.11.1", features=["macros"] }

[build-dependencies]
bindgen = "0.60.0"
cxx-build = "1.0"
