[package]
name = "vrx-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vrx = { path = "../vrx", features=["graphics"] }
shader = { path = "../vrx/shader" }
winit = "0.28.3"
paste = "1.0"
anyhow = "1.0"
nalgebra = "*"
nalgebra-glm = "*"
lazy_static = "*"
png = "*"

