[package]
name = "vrx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"
libc = "0.2.0"
anyhow = "1.0"
phf = { version = "0.11.1", features=["macros"] }

[build-dependencies]
bindgen = "0.60.0"

[features]
graphics = []
computes = []